crates/deadline-cli/tests/cli/snapshots/cli__handle_web_url__handle_web_url_download_output_required_params_succeeds.snap
---
source: crates/deadline-cli/tests/cli/handle_web_url.rs
info:
  program: deadline
  args:
    - handle-web-url
    - "deadline://download-output?farm-id=farm-0123456789abcdef0123456789abcdef&queue-id=queue-0123456789abcdef0123456789abcdef&job-id=job-0123456789abcdef0123456789abcdef"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:51396"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51396"
    AWS_ENDPOINT_URL_S3: "http://localhost:51396"
    AWS_ENDPOINT_URL_STS: "http://localhost:51396"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpEvURcJ/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpEvURcJ
---
success: true
exit_code: 0
----- stdout -----
Downloading output from Job 'Render Job'
There are no output files available for download at this moment. Please verify that the Job/Step/Task you are trying to download output from has completed successfully.

----- stderr -----
