crates/deadline-cli/tests/cli/snapshots/cli__handle_web_url__handle_web_url_url_with_uninstall_flag_errors.snap
---
source: crates/deadline-cli/tests/cli/handle_web_url.rs
info:
  program: deadline
  args:
    - handle-web-url
    - "deadline://config"
    - "--uninstall"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:51395"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51395"
    AWS_ENDPOINT_URL_S3: "http://localhost:51395"
    AWS_ENDPOINT_URL_STS: "http://localhost:51395"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmphGGfui/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmphGGfui
---
success: false
exit_code: 1
----- stdout -----
The --install, --uninstall and --all-users options cannot be used with a provided URL.

----- stderr -----
